Multi exec for commands
